fix input on iphone

--- a/src/calculator/Calculator.module.css
+++ b/src/calculator/Calculator.module.css
@@ -29,11 +29,14 @@ input {
   border-radius: 10px;
   padding-left: 15px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+  transition-property: border;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 input:focus {
   border: solid 2px blue;
-  transform: scale(1);
 }
 
 input:focus::placeholder {
